@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=com.redhat.DBus.imsettings.IMInfo
+Name=com.redhat.imsettings.IMInfo
 Exec=@libexecdir@/im-info-daemon
