@@ -1,3 +1,3 @@
 [D-BUS Service]
-Name=com.redhat.DBus.imsettings
+Name=com.redhat.imsettings
 Exec=@libexecdir@/im-settings-daemon
